# matrix-rain

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.beads/: issues.jsonl  metadata.json
benches/: render.rs
docs/: 000-spec.md  001-spec.md
examples/: custom_charset.rs  embedded.rs  standalone.rs
src/: charset.rs  config.rs  error.rs  lib.rs  state.rs  stream.rs  theme.rs  widget.rs
tests/: property.rs  snapshot.rs  widget_smoke.rs
tests/snapshots/: snapshot__default_rain_30_frames_16_color.snap  snapshot__default_rain_30_frames_256_color.snap  snapshot__default_rain_30_frames_truecolor.snap  snapshot__single_column_30_frames.snap  snapshot__single_row_30_frames.snap
