[package]
name = "matrix-rain"
version = "0.3.0"
edition = "2021"
rust-version = "1.86"
description = "Classic Matrix digital rain effect as a ratatui widget (no_std-capable) and standalone TUI binary."
license = "MIT"
keywords = ["matrix", "rain", "tui", "ratatui", "terminal"]
categories = ["command-line-utilities", "visualization", "no-std::no-alloc", "embedded"]
homepage = "https://github.com/AdamIsrael/matrix-rain.git"
repository = "https://github.com/AdamIsrael/matrix-rain.git"
documentation = "https://docs.rs/matrix-rain"
exclude = [
    ".beads/",
    ".claude/",
    ".rof/",
    "docs/",
    "AGENTS.md",
    "CLAUDE.md",
]

[features]
default = ["binary"]
# Pulls in std. Enables the wall-clock-driven animation path (uses
# `std::time::Instant::now`), terminal capability sniffing via env vars
# (`COLORTERM` / `TERM`), and `MatrixRainState::new()` (which seeds from
# system entropy). no_std users drop this feature, drive frames manually
# via `MatrixRainState::tick()`, force a tier via `set_color_count`, and
# construct state with `MatrixRainState::with_seed`.
std = ["rand/std", "rand/std_rng", "rand/getrandom", "ratatui/std"]
# The standalone `matrix` binary. Pulls in clap/anyhow/signal-hook for the
# CLI + terminal lifecycle and forces the crossterm backend for both ratatui
# and the binary's own raw-mode / alt-screen code.
binary = [
    "std",
    "dep:clap",
    "dep:anyhow",
    "dep:signal-hook",
    "dep:crossterm",
    "ratatui/crossterm",
]
# Backend passthrough features: the matrix-rain library itself is
# backend-agnostic (renders into a ratatui Buffer), but for ergonomics
# downstream users can enable one of these to forward the choice to
# ratatui in a single feature flag. Mirrors ratatui's own feature names.
# ratatui 0.30 requires std for each of these backends.
crossterm = ["std", "ratatui/crossterm"]
termion = ["std", "ratatui/termion"]
termwiz = ["std", "ratatui/termwiz"]
# Internal tracing instrumentation (developer use). Requires std.
debug = ["std", "dep:tracing"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["underline-color"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
rand_xoshiro = { version = "0.6", default-features = false }
thiserror = { version = "2", default-features = false }

crossterm = { version = "0.28", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
signal-hook = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
insta = "1"
proptest = "1"

[[bench]]
name = "render"
harness = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "matrix"
path = "src/bin/matrix.rs"
required-features = ["binary"]

# Examples ship with crossterm-based terminal-lifecycle scaffolding (Drop guard,
# panic hook, event loop). They demonstrate library usage but only build when
# the crossterm feature is enabled; embedders on other backends should look at
# the example as a template and adapt the lifecycle to their backend.
[[example]]
name = "standalone"
required-features = ["crossterm"]

[[example]]
name = "embedded"
required-features = ["crossterm"]

[[example]]
name = "custom_charset"
required-features = ["crossterm"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
